# ChangeLog for net-nds/gq
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Apr 2007; Markus Rennings (mren) <mren@mrmx.de> gq-1.2.2.ebuild:
  changed krb5-dep to virtual/krb5. Thanks to Azamat H. Hackimov on bugzilla
  again.

  12 Apr 2007; Markus Rennings (mren) <mren@mrmx.de> gq-1.2.2.ebuild:
  fixed dependencies, and added dep for libglade (thanks to Azamat H. Hackimov
  on bugzilla)

  19 Jan 2007; Markus Ullmann <jokey@gentoo.org> gq-1.2.2.ebuild:
  cosmetics

  11 Jan 2007; Jakub Moc <jakub@gentoo.org> gq-1.2.2.ebuild:
  Fix dependencies, remove automagic use flags, remove redundant inherit

  10 Jan 2007; Markus Rennings (mren) <bugs@rennings.net> +gq-1.2.2.ebuild,
  +metadata.xml:
  Initial commit.
