@@ -1,4 +1,4 @@
-DIST gq-1.2.2.tar.gz 396277 RMD160 863ea3e0a1005ff633b319ac32d5abb6ea7a605a SHA1 77643f4fa398cf41b13d0170966fed895c841687 SHA256 4a5dc43346d2d3b0e9a791ea92cfe3b1dbb787d69dd59eb1645e77e104ff801a
-EBUILD gq-1.2.2.ebuild 983 RMD160 c61e5c565969b4a68aac36153aae07a543775ba6 SHA1 3d09acf9a7e429b356d9b39fb045dca7007222ba SHA256 6ce6c1c05d3db7873240260f646831c6051a7575732941ce2487dbe596270670
-MISC ChangeLog 759 RMD160 27c6dd3acf020edd7d64d75aaf74fa4903929de1 SHA1 935797f4c07b2f3fe4f8ae2c38b2d5c774ab768a SHA256 93d4b8b644e9df433c334a1d75e64a71742c25212260066529e7140e9d4ed55d
+DIST gq-1.2.3.tar.gz 423119 RMD160 4e8bf1700f4d7aacd906559e01a11654f6ce0f90 SHA1 dc11f4c1c05037786ca6b212f4945fc20ecd33a4 SHA256 f27bd461afd226f410d42a287b7d529ce834353e101d6f88e13f51ea55c582bd
+EBUILD gq-1.2.3.ebuild 1014 RMD160 dd9213917524d070262268c384c153d3b0eb7646 SHA1 ebedce70fea88bcf895efa8626ffa02dbce45552 SHA256 95efde1b6845a2c122ca5a0178fea08daa54afd18b046a9355231deb536e5158
+MISC ChangeLog 851 RMD160 6fb2f7d09896d92ee43c6382c6782650af208698 SHA1 c953d923578ccce425563dc16317009e9ad6c64c SHA256 28255013659191d195d514e0df6d9a53a465b8f83821b8e0f0ec832523d5b033
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
